Fix border color on mobile devices

--- a/src/style.css
+++ b/src/style.css
@@ -195,15 +195,15 @@ body {
     border-collapse: collapse;
 
     @media screen and (max-width: 600px) {
-        border: 3px solid black;
+        border-width: 3px;
     }
 
     @media screen and (max-width: 500px) {
-        border: 2px solid black;
+        border-width: 2px;
     }
 
     @media screen and (max-width: 400px) {
-        border: 2px solid black;
+        border-width: 2px;
     }
 }
 
